syntax = "proto3";

package social.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/louisbranch/fracturing.space/api/gen/go/social/v1;socialv1";

// Contact stores one owner-scoped directed contact relationship.
message Contact {
  string owner_user_id = 1;
  string contact_user_id = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

// UserProfile stores one social/discovery profile for a user.
message UserProfile {
  string user_id = 1;
  string username = 2;
  string name = 3;
  string pronouns = 4;
  string bio = 5;
  string avatar_set_id = 6;
  string avatar_asset_id = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message AddContactRequest {
  string owner_user_id = 1;
  string contact_user_id = 2;
}

message AddContactResponse {
  Contact contact = 1;
}

message RemoveContactRequest {
  string owner_user_id = 1;
  string contact_user_id = 2;
}

message RemoveContactResponse {}

message ListContactsRequest {
  string owner_user_id = 1;

  // The maximum number of contacts to return.
  // If zero, the server defaults to 10. The server clamps values above 50 to 50.
  int32 page_size = 2;

  // A page token received from a prior ListContactsResponse.
  string page_token = 3;
}

message ListContactsResponse {
  repeated Contact contacts = 1;
  string next_page_token = 2;
}

message SetUserProfileRequest {
  string user_id = 1;
  string username = 2;
  string name = 3;
  string pronouns = 4;
  string bio = 5;
  string avatar_set_id = 6;
  string avatar_asset_id = 7;
}

message SetUserProfileResponse {
  UserProfile user_profile = 1;
}

message GetUserProfileRequest {
  string user_id = 1;
}

message GetUserProfileResponse {
  UserProfile user_profile = 1;
}

message LookupUserProfileRequest {
  string username = 1;
}

message LookupUserProfileResponse {
  UserProfile user_profile = 1;
}

// SocialService manages user social profiles and directed contact relationships.
service SocialService {
  rpc AddContact(AddContactRequest) returns (AddContactResponse);
  rpc RemoveContact(RemoveContactRequest) returns (RemoveContactResponse);
  rpc ListContacts(ListContactsRequest) returns (ListContactsResponse);
  rpc SetUserProfile(SetUserProfileRequest) returns (SetUserProfileResponse);
  rpc GetUserProfile(GetUserProfileRequest) returns (GetUserProfileResponse);
  rpc LookupUserProfile(LookupUserProfileRequest) returns (LookupUserProfileResponse);
}
